# contacts_app

./: app.py  pyproject.toml  schema.sql
contacts/: database_persistence.py
